# Student-Performance-Predictor-Complete-ML

./: .gitignore  .vercelignore  Dockerfile  README.md  application.py  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: azure-deploy.yml
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: EDA_Student_performance.ipynb  Model_training.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
src/: exception.py  logger.py  utlis.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
static/css/: style.css
templates/: home.html
