[project]
name = "EndToEndMLProject"
version = "0.1.0"
description = "This is my first End to end project in ml"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.3.7",
    "flask>=2.3.3",
    "numpy>=1.24.3",     
    "pandas>=1.5.3",     
    "scikit-learn>=1.3.0",
    "gunicorn>=21.2.0",           
]

[dependency-groups]
dev = []  # ← Simplified to avoid conflicts

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"